--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   margin: 20px auto;
   width: 850px;
   background: #eeeeee;
-  margin: 10 auto;
+  margin: 10px auto;
 }
 .headeroption {
   background: #204562;
